# proton-launcher

./: .clang-format  .gitignore  CMakeLists.txt  PKGBUILD  README.md  config.kcfg  extract-translations.sh  resources.qrc  xyz.instellate.proton-launcher.desktop  xyz.instellate.proton-launcher.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  language-translation-request.md
flatpak/: xyz.instellate.proton-launcher.metainfo.xml  xyz.instellate.proton-launcher.yaml
po/: proton-launcher-de_DE.po  proton-launcher.pot  proton_launcher_de_DE.po
po/de/: proton-launcher.po
po/ja/: proton-launcher.po
po/pt/: proton-launcher.po
po/sv/: proton-launcher.po
qml/: AddGameDialog.qml  DownloadProtonDialog.qml  DownloadProtonGeDialog.qml  Game.qml  GameContextMenu.qml  GameInfoCard.qml  GameSettings.qml  GameSettingsGeneralPage.qml  GameSettingsLocationPage.qml  Library.qml  Main.qml  Recent.qml  Settings.qml  utils.js
qml/settings/: GeneralSettings.qml  SettingsView.qml
resources/migrations/: 2026-01-25-10-45-initial.sql  2026-01-27-01-16-30-add-icon.sql
src/: Database.cpp  Database.h  GameInfo.cpp  GameInfo.h  GameManager.cpp  GameManager.h  ProtonDownloader.cpp  ProtonDownloader.h  ProtonLauncherApp.cpp  ProtonLauncherApp.h  SystemTray.cpp  SystemTray.h  main.cpp
